@@ -47,6 +47,10 @@ normalization.  It is possible to use Genome Studio files together with the data
 contained in this package, but in general Genome Studio files are already normalized and we do not
 recommend this.
 
+If you are using \Rpackage{minfi} in a publication, please cite \citet{minfi}.  The SWAN
+normalization method is described in \citep{Maksimovic:2012}.
+
+
 
 \subsubsection{Chip design and terminology}
 
@@ -388,13 +392,13 @@ SWAN (subset-quantile within array normalisation) is a new normalization method 
 arrays.  What follows is a brief description of the methodology (written by the authors of SWAN):
 
 Technical differences have been demonstrated to exist between the Type I and Type II assay designs
-within a single 450K array\cite{Bibikova:2011,Dedeurwaerder:2011}. Using the SWAN method
+within a single 450K array\citep{Bibikova:2011,Dedeurwaerder:2011}. Using the SWAN method
 substantially reduces the technical variability between the assay designs whilst maintaining the
 important biological differences.  The SWAN method makes the assumption that the number of CpGs
 within the 50bp probe sequence reflects the underlying biology of the region being
 interrogated. Hence, the overall distribution of intensities of probes with the same number of CpGs
 in the probe body should be the same regardless of design type. The method then uses a subset
-quantile normalization approach to adjust the intensities of each array \cite{Maksimovic:2012}.
+quantile normalization approach to adjust the intensities of each array \citep{Maksimovic:2012}.
 SWAN takes a \Rcode{MethylSet} as input. This can be generated by either \Rcode{preprocessRaw} or
 \Rcode{preprocessIllumina}.  Calling the function without specifying a \Rcode{MethylSet} uses
 \Rcode{preprocessRaw}.  It should be noted that, in order to create the normalization subset, SWAN
