@@ -1,3 +1,17 @@
+@article{minfi,
+  author =	 {Aryee, Martin J. and Jaffe, Andrew E. and Corrada-Bravo, Hector and Ladd-Acosta,
+                  Christine and Feinberg, Andrew P. and Hansen, Kasper D.  and
+                  Irizarry, Rafael A.},
+  title =	 {{Minfi: A flexible and comprehensive Bioconductor package for the analysis of
+                  Infinium DNA Methylation microarrays}},
+  journal =	 {Bioinformatics},
+  year =	 {2014},
+  note =	 {In Press},
+  doi =		 {10.1093/bioinformatics/btu049},
+  pubmed =	 {24478339},
+}
+
+
 @article{Sandoval:2011,
   author =	 {Sandoval, Juan and Heyn, Holger and Moran, Sebastian and Serra-Musach, Jordi and
                   Pujana, Miguel A and Bibikova, Marina and Esteller, Manel},
@@ -9,7 +23,7 @@
   number =	 {6},
   pages =	 {692--702},
   doi =		 {10.4161/epi.6.6.16196},
-  pmid =	 {21593595}
+  pubmed =	 {21593595}
 }
 
 @article{Du:2010,
@@ -22,7 +36,7 @@
   volume =	 {11},
   pages =	 {587},
   doi =		 {10.1186/1471-2105-11-587},
-  pmid =	 {21118553}
+  pubmed =	 {21118553}
 }
 
 @article{Bibikova:2011,
@@ -36,7 +50,7 @@
   number =	 {4},
   pages =	 {288--295},
   doi =		 {10.1016/j.ygeno.2011.07.007},
-  pmid =	 {21839163}
+  pubmed =	 {21839163}
 }
 
 @article{Dedeurwaerder:2011,
@@ -49,7 +63,7 @@
   number =	 {6},
   pages =	 {771--784},
   doi =		 {10.2217/epi.11.105},
-  pmid =	 {22126295}
+  pubmed =	 {22126295}
 }
 
 @article{Maksimovic:2012,
@@ -62,7 +76,7 @@
   number =	 {6},
   pages =	 {R44},
   doi =		 {10.1186/gb-2012-13-6-r44},
-  pmid =	 {22703947}
+  pubmed =	 {22703947}
 }
 
 % Local Variables:
